--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brainstorm",
   "version": "1.0.0",
   "description": "A Web-App for Brainstorm",
-  "main": "main.js",
+  "main": "main.mjs",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
